force-app/main/default/objects/OrgMonitoringPod__c/OrgMonitoringPod__c.object-meta.xml
<CustomObject>
    <label>OrgMonitoringPod</label>
    <nameField>
        <label>OrgMonitoringPod Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgMonitoringPods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>