force-app/main/default/objects/OrgMonitoringPod__c/fields/ApiPodStatus__c.field-meta.xml
<CustomField>
    <fullName>ApiPodStatus__c</fullName>
    <description>This is the value gathered from the API https://api.status.salesforce.com/v1/instances/POD&apos;/status/preview</description>
    <label>ApiPodStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>