force-app/main/default/objects/OrgMonitoringPod__c/fields/MasterPod__c.field-meta.xml
<CustomField>
    <fullName>MasterPod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MasterPod</label>
    <type>Checkbox</type>
</CustomField>