force-app/main/default/objects/OrgMonitoringPod__c/fields/Pod__c.field-meta.xml
<CustomField>
    <fullName>Pod__c</fullName>
    <label>Pod</label>
    <length>10</length>
    <type>Text</type>
</CustomField>